use of java 1.5 features